--- a/css/style.css
+++ b/css/style.css
@@ -439,6 +439,7 @@ body.section-show .transition-mask:before{
 
 .front-section{
 	padding-top:0px;
+	padding-bottom: 0px;
 	position:relative;
 }
 .front-heading{
